Bug 51460 - Calc fails to set undo step after changing image anchor mode
Summary: Calc fails to set undo step after changing image anchor mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.3 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-26 13:38 UTC by OfficeUser
Modified: 2015-04-03 09:44 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Issue.ods (14.04 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-06-26 13:38 UTC, OfficeUser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OfficeUser 2012-06-26 13:38:50 UTC
Created attachment 63497 [details]
Issue.ods

Steps to reproduce:
- Please open the attached spreadsheet
- Right-click the image Anchor/To Cell

Actual behaviour:
Note that the undo button is still grayed out. Calc has not set an undo step.

Expected behaviour:
Calc should add an undo step.


Found with
LibreOffice 3.5.3.2 
Build ID: 235ab8a-3802056-4a8fed3-2d66ea8-e241b8
using WindowsXP.
Comment 1 OfficeUser 2012-06-26 13:42:25 UTC
I can also reproduce the bug using Linux build
LibreOffice 3.5.3.2 
Build-ID: 235ab8a-3802056-4a8fed3-2d66ea8-e241b80
Comment 2 Noel Grandin 2012-09-06 14:23:09 UTC
Confirmed in 3.6.1.2 (Windows)
Comment 3 QA Administrators 2015-01-05 17:52:07 UTC
** Please read this message in its entirety before responding **

To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year.

There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present.

If you have time, please do the following:

Test to see if the bug is still present on a currently supported version of LibreOffice (4.3.5 or later): https://www.libreoffice.org/download/

If the bug is present, please leave a comment that includes the version of LibreOffice and your operating system, and any changes you see in the bug behavior

If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a short comment that includes your version of LibreOffice and Operating System

Please DO NOT

Update the version field
Reply via email (please reply directly on the bug tracker)
Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case)

Thank you for your help!

-- The LibreOffice QA Team
Comment 4 OfficeUser 2015-01-09 12:05:43 UTC
Bug still present in:

Version: 4.4.0.1
Build-ID: 1ba9640ddd424f1f535c75bf2b86703770b8cf6f
Gebietsschema: de_DE

OS: Windows 8
Comment 5 A (Andy) 2015-02-14 08:07:27 UTC
Reproducible with LO 4.4.0.3, Win 8.1

Note: To see the image, you need first to make a double click on it. (another already reported bug)
Comment 6 Commit Notification 2015-04-03 07:32:59 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bff29a3b30c8e57ab78937dca862fd738f26d89e

tdf#51460 Calc fails to set undo step after changing image anchor mode

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.