fdo#51460 Calc fails to set undo step after changing image anchor mode

Fixed. Note that the undo button is still grayed out. Calc has not set an undo step.

Change-Id: I7ff713a906b365b460351e5202161c9152542395